fix flickering tooltip on bar chart

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,9 @@ h3 {
   color: #333;
 }
 
+/* fix flickering tooltip in google chart */
+svg > g > g:last-child { pointer-events: none }
+
 /* override rc-slider */
 
 .rc-slider-rail {
